@@ -1,30 +1,46 @@
+// src/main/java/com/example/demo/service/impl/ProductServiceImpl.java
 package com.example.demo.service.impl;
 
 import com.example.demo.entity.Product;
 import com.example.demo.repository.ProductRepository;
 import com.example.demo.service.ProductService;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
+import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
+
 @Service
+@Transactional
 public class ProductServiceImpl implements ProductService {
-
-    private final ProductRepository repo;
-
-    public ProductServiceImpl(ProductRepository repo) {
-        this.repo = repo;
+    
+    @Autowired
+    private ProductRepository productRepository;
+    
+    public ProductServiceImpl(ProductRepository productRepository) {
+        this.productRepository = productRepository;
     }
-
-    public Product addProduct(Product p) {
-        if (p.getModelNumber() == null || p.getModelNumber().isBlank())
+    
+    @Override
+    public Product addProduct(Product product) {
+        if (product.getModelNumber() == null || product.getModelNumber().trim().isEmpty()) {
             throw new IllegalArgumentException("Model number required");
-        if (p.getCategory() == null || p.getCategory().isBlank())
+        }
+        
+        if (product.getCategory() == null || product.getCategory().trim().isEmpty()) {
             throw new IllegalArgumentException("Category required");
-
-        return repo.save(p);
+        }
+        
+        return productRepository.save(product);
     }
-
+    
+    @Override
     public List<Product> getAllProducts() {
-        return repo.findAll();
+        return productRepository.findAll();
+    }
+    
+    @Override
+    public Product getProductById(Long id) {
+        return productRepository.findById(id)
+            .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
     }
 }
